# freedom-devicetree-tools

./: .clang-format  .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  aclocal.m4  build.wake  conanfile.py  configure  configure.ac  dtc.wake  fdt.c++  fdt.h++  freedom-ldscript-generator.c++  freedom-makeattributes-generator.c++  freedom-mee_header-generator.c++  freedom-mee_specs-generator.c++  freedom-metal_header-generator.c++  freedom-metal_specs-generator.c++  freedom-openocdcfg-generator.c++  freedom-zephyrdtsfixup-generator.c++  header-labels.h  libfdt.h++  multilib.h++  ranges.c++  ranges.h  regs.c++  regs.h
.github/workflows/: release.yml  tests.yml  wake.yml
bare_header/: device.c++  device.h  fixed_clock.h  fixed_factor_clock.h  freedom-bare_header-generator.c++  riscv_clint0.h  riscv_dma0.h  riscv_plic0.h  riscv_pmp.h  sifive_aon0.h  sifive_buserror0.h  sifive_ccache0.h  sifive_clic0.h  sifive_error0.h  sifive_fe310_g000_hfrosc.h  sifive_fe310_g000_hfxosc.h  sifive_fe310_g000_lfrosc.h  sifive_fe310_g000_pll.h  sifive_fe310_g000_prci.h  sifive_fu540_c000_l2.h  sifive_global_external_interrupts0.h  sifive_gpio0.h  sifive_gpio2.h  sifive_gpio_buttons.h  sifive_gpio_leds.h  sifive_gpio_switches.h  sifive_hca_0_5_0.h  sifive_hca_0_5_x.h  sifive_hca_1_x_x.h  sifive_i2c0.h  sifive_l2pf0.h  sifive_l2pf1.h  sifive_local_external_interrupts0.h  sifive_lpdma0.h  sifive_mallard0.h  sifive_nb2emmc.h  sifive_nb2gpio0.h  sifive_nb2i2c0.h  sifive_nb2otp.h  sifive_nb2qspi0.h  (+26 more)
docker/: Dockerfile
linker_script/: freedom-ldscript-generator.c++  linker_script.c++  linker_script.h  map_strategy.c++  map_strategy.h  memory.c++  memory.h  phdr.c++  phdr.h  ranges.h  section.c++  section.h  section_group.c++  section_group.h
linker_script/layouts/: default_layout.c++  default_layout.h  ramrodata_layout.c++  ramrodata_layout.h  scratchpad_layout.c++  scratchpad_layout.h
linker_script/sections/: constants_group.c++  constants_group.h  ctors_group.c++  ctors_group.h  data_group.c++  data_group.h  init_text_group.c++  init_text_group.h  itim_group.c++  itim_group.h  itim_text_group.c++  itim_text_group.h  rodata_group.c++  rodata_group.h  text_group.c++  text_group.h  uninit_group.c++  uninit_group.h
linker_script/strategies/: chosen_strategy.c++  chosen_strategy.h  create_strategy.sh  default_bullet_arty.c++  default_bullet_arty.h  default_bullet_strategy.c++  default_bullet_strategy.h  default_e20_arty_strategy.c++  default_e20_arty_strategy.h  default_e20_strategy.c++  default_e20_strategy.h  default_e21_arty_strategy.c++  default_e21_arty_strategy.h  default_e21_strategy.c++  default_e21_strategy.h  default_rocket_arty.c++  default_rocket_arty.h  default_rocket_strategy.c++  default_rocket_strategy.h  memory_only_strategy.c++  memory_only_strategy.h  rocket_bootrom_strategy.c++  rocket_bootrom_strategy.h  template_strategy.c++  template_strategy.h
linker_script/test/: blank_rv64.dtb  blank_rv64.dts  ldscript_cmodel_unit.c++
metal_header/: device.c++  device.h  fixed_clock.c++  fixed_clock.h  fixed_factor_clock.c++  fixed_factor_clock.h  freedom-metal_header-generator.c++  inline.h  memory.c++  memory.h  riscv_clint0.c++  riscv_clint0.h  riscv_cpu.c++  riscv_cpu.h  riscv_cpu_intc.c++  riscv_cpu_intc.h  riscv_dma0.c++  riscv_dma0.h  riscv_plic0.c++  riscv_plic0.h  riscv_pmp.c++  riscv_pmp.h  sifive_buserror0.c++  sifive_buserror0.h  sifive_ccache0.c++  sifive_ccache0.h  sifive_clic0.c++  sifive_clic0.h  sifive_fe310_g000_hfrosc.c++  sifive_fe310_g000_hfrosc.h  sifive_fe310_g000_hfxosc.c++  sifive_fe310_g000_hfxosc.h  sifive_fe310_g000_lfrosc.c++  sifive_fe310_g000_lfrosc.h  sifive_fe310_g000_pll.c++  sifive_fe310_g000_pll.h  sifive_fe310_g000_prci.c++  sifive_fe310_g000_prci.h  sifive_flash.c++  sifive_flash.h  (+89 more)
scripts/: autoconf_wrapper  check-format  format  git-version
tests/: e31-arty-ldscript.bash  e31-arty-makeattributes.bash  e31-arty-mee_header.bash  e31-arty-metal_header.bash  e31-arty-openocd.bash  e31-arty.dts  e31-bigmem-ldscript.bash  e31-bigmem-makeattributes.bash  e31-bigmem-mee_header.bash  e31-bigmem-metal_header.bash  e31-bigmem-openocd.bash  e31-bigmem.dts  e31-eval-ldscript.bash  e31-eval-makeattributes.bash  e31-eval-mee_header.bash  e31-eval-metal_header.bash  e31-eval-openocd.bash  e31-eval-simple_bus-ldscript.bash  e31-eval-simple_bus-makeattributes.bash  e31-eval-simple_bus-mee_header.bash  e31-eval-simple_bus-openocd.bash  e31-eval-simple_bus.dts  e31-eval.dts  e31-memory-ldscript.bash  e31-memory-makeattributes.bash  e31-memory-mee_header.bash  e31-memory-metal_header.bash  e31-memory-openocd.bash  e31-memory.dts  e31-ranges-ldscript.bash  e31-ranges-makeattributes.bash  e31-ranges-mee_header.bash  e31-ranges-metal_header.bash  e31-ranges-openocd.bash  e31-ranges.dts  e34-eval-ldscript.bash  e34-eval-makeattributes.bash  e34-eval-mee_header.bash  e34-eval-mee_specs.bash  e34-eval-metal_header.bash  (+37 more)
tests/e20-arty/: core.dts  design.dts
tests/e20-rtl/: core.dts  design.dts
tests/e21-arty/: core.dts
tests/e21-rtl/: core.dts
tests/e24-arty/: core.dts
tests/e24-rtl/: core.dts  design.dts
tests/e31-arty/: core.dts
tests/e31-rtl/: core.dts
tests/e34-arty/: core.dts  design.dts
tests/e34-rtl/: core.dts  design.dts  test-ldscript-generator.bash
tests/e76-arty/: core.dts  design.dts
tests/e76-rtl/: core.dts
tests/e76mc-arty/: core.dts  test-bare_header-generator.bash
tests/e76mc-rtl/: core.dts  design.dts
tests/freedom-e310-arty/: test-openocdcfg-generator.bash
tests/qemu-sifive-e31/: core.dts  test-metal_header-generator.bash
tests/qemu-sifive-s51/: core.dts
tests/qemu-sifive-u54/: design.dts
tests/qemu-sifive-u54mc/: design.dts
tests/s21-arty/: core.dts  design.dts
tests/s21-rtl/: core.dts  design.dts
tests/s51-arty/: core.dts
tests/s51-rtl/: core.dts  design.dts
tests/s54-arty/: core.dts
tests/s54-rtl/: core.dts
tests/s76-arty/: core.dts
tests/s76-rtl/: core.dts
tests/s76mc-arty/: core.dts  design.dts
tests/s76mc-rtl/: core.dts
tests/sifive-hifive-unleashed/: design.dts
(+22 files in other folders)
